# Android-NativeApp

app/: build.gradle
app/src/androidTest/java/com/ashwani/nativeapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  helloworld-c.cpp
app/src/test/java/com/ashwani/nativeapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
